--- a/frontend/favorites.html
+++ b/frontend/favorites.html
@@ -24,7 +24,7 @@
             <nav class="main-nav">
                 <a href="recommendations.html" class="nav-link">Рекомендации</a>
                 <a href="favorites.html" class="nav-link active">Избранное</a>
-                <a href="history.html" class="nav-link">История</a>
+                <!-- <a href="history.html" class="nav-link">История</a> -->
                 <a href="profile.html" class="nav-link">Профиль</a>
             </nav>
             <div class="user-section">
@@ -80,14 +80,6 @@
 
             <div class="favorites-actions">
                 <div class="action-buttons">
-                    <button class="action-btn outline">
-                        <i class="fas fa-sort"></i>
-                        Сортировка
-                    </button>
-                    <button class="action-btn outline">
-                        <i class="fas fa-filter"></i>
-                        Фильтры
-                    </button>
                     <button class="action-btn primary">
                         <i class="fas fa-share"></i>
                         Поделиться списком
@@ -339,46 +331,6 @@
             </div>
         </div>
     </main>
-
-    <!-- Footer -->
-    <footer class="main-footer">
-        <div class="footer-container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>MaxToGo</h3>
-                    <p>Персональный гид по вашему городу. Находите лучшие места для отдыха на основе вашего настроения и предпочтений.</p>
-                </div>
-                <div class="footer-section">
-                    <h4>Навигация</h4>
-                    <ul>
-                        <li><a href="index.html">Главная</a></li>
-                        <li><a href="recommendations.html">Рекомендации</a></li>
-                        <li><a href="favorites.html">Избранное</a></li>
-                        <li><a href="history.html">История</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>Поддержка</h4>
-                    <ul>
-                        <li><a href="faq.html">Частые вопросы</a></li>
-                        <li><a href="contact.html">Контакты</a></li>
-                        <li><a href="privacy.html">Политика конфиденциальности</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>Следите за нами</h4>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-vk"></i></a>
-                        <a href="#"><i class="fab fa-telegram"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 MaxToGo. Все права защищены.</p>
-            </div>
-        </div>
-    </footer>
 
     <script src="js/favorites.js"></script>
 </body>
