--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,12 +24,12 @@
             <nav class="main-nav">
                 <a href="recommendations.html" class="nav-link">Рекомендации</a>
                 <a href="favorites.html" class="nav-link">Избранное</a>
-                <a href="history.html" class="nav-link">История</a>
+                <!-- <a href="history.html" class="nav-link">История</a> -->
                 <a href="profile.html" class="nav-link">Профиль</a>
             </nav>
-            <div class="auth-buttons">
+            <!-- <div class="auth-buttons">
                 <a href="profile.html" class="btn-outline">Войти</a>
-            </div>
+            </div> -->
         </div>
     </header>
 
@@ -40,9 +40,9 @@
                 <div class="progress-bar">
                     <div class="progress-fill" style="width: 0%"></div>
                 </div>
-                <div class="skip-btn" id="skipSurvey">
+                <!-- <div class="skip-btn" id="skipSurvey">
                     <a href="recommendations.html">Пропустить</a>
-                </div>
+                </div> -->
             </div>
 
             <div class="cards-container">
@@ -138,9 +138,9 @@
                 <div class="survey-card" data-step="4">
                     <div class="card-illustration">
                         <div class="interests-grid">
-                            <div class="interest-option" data-interest="food">
-                                <div class="interest-icon">🍕</div>
-                                <span>Еда</span>
+                            <div class="interest-option" data-interest="music">
+                                <div class="interest-icon">🎵</div>
+                                <span>Музыка</span>
                             </div>
                             <div class="interest-option" data-interest="nature">
                                 <div class="interest-icon">🌳</div>
@@ -154,13 +154,13 @@
                                 <div class="interest-icon">⚽</div>
                                 <span>Спорт</span>
                             </div>
-                            <div class="interest-option" data-interest="shopping">
-                                <div class="interest-icon">🛍️</div>
-                                <span>Шоппинг</span>
+                            <div class="interest-option" data-interest="science">
+                                <div class="interest-icon">🔬</div>
+                                <span>Наука</span>
                             </div>
-                            <div class="interest-option" data-interest="entertainment">
-                                <div class="interest-icon">🎮</div>
-                                <span>Развлечения</span>
+                            <div class="interest-option" data-interest="art">
+                                <div class="interest-icon">🎨</div>
+                                <span>Искусство</span>
                             </div>
                         </div>
                     </div>
@@ -204,46 +204,6 @@
             </div>
         </div>
     </main>
-
-    <!-- Footer -->
-    <footer class="main-footer">
-        <div class="footer-container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>MaxToGo</h3>
-                    <p>Персональный гид по вашему городу. Находите лучшие места для отдыха на основе вашего настроения и предпочтений.</p>
-                </div>
-                <div class="footer-section">
-                    <h4>Навигация</h4>
-                    <ul>
-                        <li><a href="index.html">Главная</a></li>
-                        <li><a href="recommendations.html">Рекомендации</a></li>
-                        <li><a href="favorites.html">Избранное</a></li>
-                        <li><a href="history.html">История</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>Поддержка</h4>
-                    <ul>
-                        <li><a href="faq.html">Частые вопросы</a></li>
-                        <li><a href="contact.html">Контакты</a></li>
-                        <li><a href="privacy.html">Политика конфиденциальности</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>Следите за нами</h4>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-vk"></i></a>
-                        <a href="#"><i class="fab fa-telegram"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 MaxToGo. Все права защищены.</p>
-            </div>
-        </div>
-    </footer>
 
     <script src="js/survey.js"></script>
 </body>
