Рабочая версия связи фронта и бека

--- a/frontend/recommendations.html
+++ b/frontend/recommendations.html
@@ -114,132 +114,7 @@
                 <h2 class="section-title">Персональные рекомендации</h2>
             </div>
 
-            <div class="recommendations-grid">
-                <!-- Recommendation Card 1 -->
-                <div class="recommendation-card">
-                    <div class="card-image">
-                        🌳
-                        <div class="place-type">🌳 Парк</div>
-                        <button class="favorite-btn">
-                            <i class="far fa-heart"></i>
-                        </button>
-                    </div>
-                    <div class="card-content">
-                        <h3>Центральный парк культуры</h3>
-                        <p>Просторный парк с озерами, велодорожками и зонами для пикника. Идеально для активного отдыха.</p>
-                        <div class="card-actions">
-                            <button class="action-btn secondary-action">
-                                <i class="fas fa-info-circle"></i>
-                                Подробнее
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Recommendation Card 2 -->
-                <div class="recommendation-card">
-                    <div class="card-image">
-                        🎨
-                        <div class="place-type">🎨 Искусство</div>
-                        <button class="favorite-btn">
-                            <i class="far fa-heart"></i>
-                        </button>
-                    </div>
-                    <div class="card-content">
-                        <h3>Галерея современного искусства</h3>
-                        <p>Современные выставки, инсталляции и мастер-классы. Вдохновляющая атмосфера для творческих натур.</p>
-                        <div class="card-actions">
-                            <button class="action-btn secondary-action">
-                                <i class="fas fa-info-circle"></i>
-                                Подробнее
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Recommendation Card 3 -->
-                <div class="recommendation-card">
-                    <div class="card-image">
-                        ☕
-                        <div class="place-type">☕ Кафе</div>
-                        <button class="favorite-btn">
-                            <i class="far fa-heart"></i>
-                        </button>
-                    </div>
-                    <div class="card-content">
-                        <h3>Кофейня "Уютный уголок"</h3>
-                        <p>Атмосферное место с авторским кофе и домашней выпечкой. Бесплатный Wi-Fi и розетки.</p>
-                        <div class="card-actions">
-                            <button class="action-btn secondary-action">
-                                <i class="fas fa-info-circle"></i>
-                                Подробнее
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Recommendation Card 4 -->
-                <div class="recommendation-card">
-                    <div class="card-image">
-                        ⚽
-                        <div class="place-type">⚽ Спорт</div>
-                        <button class="favorite-btn">
-                            <i class="far fa-heart"></i>
-                        </button>
-                    </div>
-                    <div class="card-content">
-                        <h3>Спортивный комплекс "Энергия"</h3>
-                        <p>Современный фитнес-центр с бассейном, тренажерным залом и групповыми занятиями.</p>
-                        <div class="card-actions">
-                            <button class="action-btn secondary-action">
-                                <i class="fas fa-info-circle"></i>
-                                Подробнее
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Recommendation Card 5 -->
-                <div class="recommendation-card">
-                    <div class="card-image">
-                        🛍️
-                        <div class="place-type">🛍️ Шоппинг</div>
-                        <button class="favorite-btn">
-                            <i class="far fa-heart"></i>
-                        </button>
-                    </div>
-                    <div class="card-content">
-                        <h3>Торговый центр "Стиль"</h3>
-                        <p>Более 200 магазинов, фудкорт и кинотеатр. Есть подземная парковка.</p>
-                        <div class="card-actions">
-                            <button class="action-btn secondary-action">
-                                <i class="fas fa-info-circle"></i>
-                                Подробнее
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Recommendation Card 6 -->
-                <div class="recommendation-card">
-                    <div class="card-image">
-                        🎬
-                        <div class="place-type">🎬 Развлечения</div>
-                        <button class="favorite-btn">
-                            <i class="far fa-heart"></i>
-                        </button>
-                    </div>
-                    <div class="card-content">
-                        <h3>Кинотеатр "Звезда"</h3>
-                        <p>Новейшие фильмы в комфортных залах с системой Dolby Atmos. Есть залы для детей.</p>
-                        <div class="card-actions">
-                            <button class="action-btn secondary-action">
-                                <i class="fas fa-info-circle"></i>
-                                Подробнее
-                            </button>
-                        </div>
-                    </div>
-                </div>
+            <div class="recommendations-grid" id="recommendationsGrid">
             </div>
         </section>
     </main>
